[metadata]
name = matchmock
author = David Keijser
author_email = keijser@gmail.com
version = 1.0.0
description = Hamcrest matchers for mock objects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keis/matchmock

[options]
packages = matchmock

[options.extras_require]
tests =
  pytest>=4.6
  pytest-flakes<2
  pytest-cov
  PyHamcrest
  pep8
  mock
  coveralls
