[metadata]
name = matchmock
author = David Keijser
author_email = keijser@gmail.com
version = 2.1.0
description = Hamcrest matchers for mock objects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keis/matchmock

[options]
packages = matchmock
zip_safe = False

[options.package_data]
matchmock = py.typed

[options.extras_require]
tests =
  pytest>=6
  pytest-flakes>2
  pytest-cov
  PyHamcrest
  pycodestyle
  mock
  coveralls
  mypy
  types-mock

[mypy]
warn_unreachable = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_return_any = True
disallow_any_unimported = True
check_untyped_defs = True
incremental = False
